tests/m1/negative/function_prototype_missing_definition.ax
module function_prototype_missing_definition;

fn value() -> i32;

fn main() -> i32 {
    return value();
}
